--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "contributors": [
     "ModusBox",
     "Georgi Georgiev <georgi.georgiev@modusbox.com>",
-    "Rajiv Mothilal <rajiv.mothilal@modusbox.com>"
+    "Rajiv Mothilal <rajiv.mothilal@modusbox.com>",
+    "Valentin Genev <valentin.genev@modusbox.com>"
   ],
   "license": "Apache-2.0",
   "keywords": [
