--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@mojaloop/ml-number",
-  "version": "11.1.0",
+  "version": "11.2.0",
   "description": "Mojaloop Number Library implementation that handles decimal processing of amounts/numbers",
   "author": "ModusBox",
   "contributors": [
     "ModusBox",
     "Georgi Georgiev <georgi.georgiev@modusbox.com>",
     "Rajiv Mothilal <rajiv.mothilal@modusbox.com>",
-    "Valentin Genev <valentin.genev@modusbox.com>"
+    "Valentin Genev <valentin.genev@modusbox.com>",
+    "Miguel de Barros <miguel.barros@modusbox.com>"
   ],
   "license": "Apache-2.0",
   "keywords": [
@@ -24,7 +25,10 @@
   ],
   "scripts": {
     "test": "npm run test:unit | faucet",
-    "standard": "standard",
+    "standard": "npx standard",
+    "standard:fix": "npx standard --fix",
+    "lint": "npm run standard",
+    "lint:fix": "npm run standard:fix",
     "test:unit": "tapes 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
     "test:coverage": "nyc --reporter=lcov --reporter=text-summary tapes -- 'test/unit/**/**.test.js'",
@@ -44,15 +48,15 @@
     "bignumber.js": "9.0.1"
   },
   "devDependencies": {
-    "eslint": "7.26.0",
+    "eslint": "7.32.0",
     "faucet": "0.0.1",
-    "npm-audit-resolver": "2.3.0",
-    "npm-check-updates": "11.5.11",
+    "npm-audit-resolver": "2.3.1",
+    "npm-check-updates": "11.8.5",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "standard": "16.0.3",
     "tap-xunit": "2.4.1",
-    "tape": "5.2.2",
+    "tape": "5.3.1",
     "tapes": "4.1.0"
   }
 }
