--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,27 @@ orbs:
   pr-tools: mojaloop/pr-tools@0.1.8
   github-release: h-matsuo/github-release@0.1.3
 
+##
+# Executors
+#
+# CircleCI Executors
+##
+executors:
+  default-docker:
+    working_directory: /home/circleci/project
+    docker:
+      - image: node:12.16.1-alpine
+
+  default-machine:
+    machine:
+      image: ubuntu-1604:201903-01
+
 defaults_working_directory: &defaults_working_directory
   working_directory: /home/circleci/project
 
 defaults_docker_node: &defaults_docker_node
   docker:
-    - image: node:12.16.0-alpine
+    - image: node:12.16.1-alpine
 
 defaults_Dependencies: &defaults_Dependencies |
     apk --no-cache add git
@@ -77,7 +92,7 @@ defaults_slack_announcement: &defaults_slack_announcement
 jobs:
   setup:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -93,7 +108,7 @@ jobs:
 
   test-unit:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -118,7 +133,7 @@ jobs:
 
   test-coverage:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -150,7 +165,7 @@ jobs:
 
   vulnerability-check:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -170,7 +185,7 @@ jobs:
 
   audit-licenses:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -189,7 +204,7 @@ jobs:
 
   publish-snapshot:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
@@ -208,7 +223,7 @@ jobs:
 
   publish:
     <<: *defaults_working_directory
-    <<: *defaults_docker_node
+    executor: default-docker
     steps:
       - run:
           name: Install general dependencies
