--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ModusBox",
     "Georgi Georgiev <georgi.georgiev@modusbox.com>",
     "Rajiv Mothilal <rajiv.mothilal@modusbox.com>",
-    "Valentin Genev <valentin.genev@modusbox.com>"
+    "Valentin Genev <valentin.genev@modusbox.com>",
+    "Miguel de Barros <miguel.barros@modusbox.com>"
   ],
   "license": "Apache-2.0",
   "keywords": [
@@ -24,7 +25,10 @@
   ],
   "scripts": {
     "test": "npm run test:unit | faucet",
-    "standard": "standard",
+    "standard": "npx standard",
+    "standard:fix": "npx standard --fix",
+    "lint": "npm run standard",
+    "lint:fix": "npm run standard:fix",
     "test:unit": "tapes 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
     "test:coverage": "nyc --reporter=lcov --reporter=text-summary tapes -- 'test/unit/**/**.test.js'",
@@ -32,7 +36,8 @@
     "audit:resolve": "SHELL=sh resolve-audit --production",
     "audit:check": "SHELL=sh check-audit --production",
     "dep:check": "npx ncu -e 2",
-    "dep:update": "npx ncu -u"
+    "dep:update": "npx ncu -u",
+    "release": "standard-version --releaseCommitMessageFormat 'chore(release): {{currentTag}} [skip ci]'"
   },
   "standard": {
     "ignore": []
@@ -44,15 +49,16 @@
     "bignumber.js": "9.0.1"
   },
   "devDependencies": {
-    "eslint": "7.26.0",
+    "eslint": "7.32.0",
     "faucet": "0.0.1",
-    "npm-audit-resolver": "2.3.0",
-    "npm-check-updates": "11.5.11",
+    "npm-audit-resolver": "2.3.1",
+    "npm-check-updates": "11.8.5",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "standard": "16.0.3",
+    "standard-version": "^9.3.1",
     "tap-xunit": "2.4.1",
-    "tape": "5.2.2",
+    "tape": "5.3.1",
     "tapes": "4.1.0"
   }
 }
