--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   "devDependencies": {
     "eslint": "8.47.0",
     "faucet": "0.0.4",
-    "npm-audit-resolver": "2.3.1",
     "npm-check-updates": "16.12.1",
+    "npm-audit-resolver": "3.0.0-RC.0",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "standard": "17.1.0",
