--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ version: 2.1
 # Orbs used in this pipeline
 ###
 orbs:
-  anchore: anchore/anchore-engine@1.6.0
   slack: circleci/slack@3.4.2
-  pr-tools: mojaloop/pr-tools@0.1.8
+  pr-tools: mojaloop/pr-tools@0.1.10
   github-release: h-matsuo/github-release@0.1.3
 
 ##
@@ -20,12 +19,14 @@ orbs:
 executors:
   default-docker:
     working_directory: /home/circleci/project
+    shell: "/bin/sh -leo pipefail" # Ref: https://circleci.com/docs/env-vars/#alpine-linux
     docker:
-      - image: node:12.16.1-alpine
+      - image: node:lts-alpine  # Ref: https://hub.docker.com/_/node?tab=tags&page=1&name=alpine
 
   default-machine:
+    shell: "/bin/bash -leo pipefail"
     machine:
-      image: ubuntu-1604:201903-01
+      image: ubuntu-2204:2023.04.2 # Ref: https://circleci.com/developer/machine/image/ubuntu-2204
 
 defaults_working_directory: &defaults_working_directory
   working_directory: /home/circleci/project
@@ -36,8 +37,7 @@ defaults_Dependencies: &defaults_Dependencies |
     apk --no-cache add curl
     apk --no-cache add openssh-client
     apk --no-cache add bash
-    apk add --no-cache -t build-dependencies make gcc g++ python libtool autoconf automake
-    npm config set unsafe-perm true
+    apk --no-cache add -t build-dependencies make gcc g++ python libtool autoconf automake
     npm install -g node-gyp
 
 defaults_awsCliDependencies: &defaults_awsCliDependencies |
@@ -85,6 +85,14 @@ defaults_slack_announcement: &defaults_slack_announcement
       \"text\": \"*${CIRCLE_PROJECT_REPONAME}* - Release \`${CIRCLE_TAG}\`: https://github.com/mojaloop/${CIRCLE_PROJECT_REPONAME}/releases/tag/${CIRCLE_TAG}\"
     }"
 
+defaults_display_versions: &defaults_display_versions
+  name: Display Versions
+  command: |
+    echo "What is the active version of Nodejs?"
+    echo "node: $(node --version)"
+    echo "yarn: $(yarn --version)"
+    echo "npm: $(npm --version)"
+
 jobs:
   setup:
     <<: *defaults_working_directory
@@ -94,6 +102,8 @@ jobs:
           name: Install general dependencies
           command: *defaults_Dependencies
       - checkout
+      - run:
+          <<: *defaults_display_versions
       - run:
           name: Update NPM install
           command: npm install
@@ -110,6 +120,8 @@ jobs:
           name: Install general dependencies
           command: *defaults_Dependencies
       - checkout
+      - run:
+          <<: *defaults_display_versions
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
@@ -138,6 +150,8 @@ jobs:
           name: Install AWS CLI dependencies
           command: *defaults_awsCliDependencies
       - checkout
+      - run:
+          <<: *defaults_display_versions
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
@@ -167,6 +181,8 @@ jobs:
           name: Install general dependencies
           command: *defaults_Dependencies
       - checkout
+      - run:
+          <<: *defaults_display_versions
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
@@ -189,6 +205,8 @@ jobs:
       - run:
           <<: *defaults_license_scanner
       - checkout
+      - run:
+          <<: *defaults_display_versions
       - restore_cache:
           key: dependency-cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
