--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ defaults_docker_Dependencies: &defaults_docker_Dependencies |
 
 defaults_awsCliDependencies: &defaults_awsCliDependencies |
     apk --no-cache add \
-            python \
+            python3 \
             py-pip \
             groff \
             less \
