--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:xunit": "npm run test:unit | tap-xunit",
     "test:coverage": "nyc --reporter=lcov --reporter=text-summary tapes -- 'test/unit/**/**.test.js'",
     "test:coverage-check": "npm run test:coverage && nyc check-coverage",
-    "audit:resolve": "SHELL=sh resolve-audit --production",
-    "audit:check": "SHELL=sh check-audit --production",
+    "audit:fix": "npm audit fix",
+    "audit:check": "npx audit-ci --config ./audit-ci.jsonc",
     "dep:check": "npx ncu -e 2",
     "dep:update": "npx ncu -u",
     "release": "standard-version --releaseCommitMessageFormat 'chore(release): {{currentTag}} [skip ci]'"
@@ -49,10 +49,10 @@
     "bignumber.js": "9.1.1"
   },
   "devDependencies": {
+    "audit-ci": "^6.6.1",
     "eslint": "8.47.0",
     "faucet": "0.0.4",
     "npm-check-updates": "16.12.2",
-    "npm-audit-resolver": "3.0.0-RC.0",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "standard": "17.1.0",
