--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,6 +343,7 @@ jobs:
 
   github-release:
     executor: default-machine
+    shell: "/bin/bash -eo pipefail"
     steps:
       - run:
           name: Install git
