--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "standard:fix": "npx standard --fix",
     "lint": "npm run standard",
     "lint:fix": "npm run standard:fix",
-    "test:unit": "tapes 'test/unit/**/**.test.js'",
+    "test:unit": "tape 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
-    "test:coverage": "nyc --reporter=lcov --reporter=text-summary tapes -- 'test/unit/**/**.test.js'",
+    "test:coverage": "nyc --reporter=lcov --reporter=text-summary tape 'test/unit/**/**.test.js'",
     "test:coverage-check": "npm run test:coverage && nyc check-coverage",
     "audit:fix": "npm audit fix",
     "audit:check": "npx audit-ci --config ./audit-ci.jsonc",
@@ -50,18 +50,19 @@
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
-    "eslint": "9.17.0",
+    "eslint": "9.18.0",
     "faucet": "0.0.4",
-    "npm-check-updates": "17.1.13",
+    "npm-check-updates": "17.1.14",
     "nyc": "17.1.0",
     "pre-commit": "1.2.2",
     "standard": "17.1.2",
     "standard-version": "^9.5.0",
     "tap-xunit": "2.4.1",
-    "tape": "5.9.0",
-    "tapes": "4.1.0"
+    "tape": "5.9.0"
   },
   "overrides": {
-    "cross-spawn": "7.0.6"
+    "cross-spawn": "7.0.6",
+    "glob": "10.4.5",
+    "rimraf": "5.0.10"
   }
 }
