chore: replace nyc with c8

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
-.nyc_output
+# c8 test coverage
+.c8_output
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
