--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint:fix": "npm run standard:fix",
     "test:unit": "tape 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
-    "test:coverage": "nyc --reporter=lcov --reporter=text-summary tape 'test/unit/**/**.test.js'",
-    "test:coverage-check": "npm run test:coverage && nyc check-coverage",
+    "test:coverage": "c8 --reporter=lcov --reporter=text-summary tape 'test/unit/**/**.test.js'",
+    "test:coverage-check": "c8 --check-coverage tape 'test/unit/**/**.test.js'",
     "audit:fix": "npm audit fix",
     "audit:check": "npx audit-ci --config ./audit-ci.jsonc",
     "dep:check": "npx ncu -e 2",
@@ -50,10 +50,10 @@
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
+    "c8": "^10.1.3",
     "eslint": "9.18.0",
     "faucet": "0.0.4",
     "npm-check-updates": "17.1.14",
-    "nyc": "17.1.0",
     "pre-commit": "1.2.2",
     "standard": "17.1.2",
     "standard-version": "^9.5.0",
