--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# c8 test coverage
-.c8_output
+# nyc test coverage
+.nyc_output
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
