chore: update test coverage and check scripts

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint:fix": "npm run standard:fix",
     "test:unit": "tape 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
-    "test:coverage": "nyc --reporter=lcov --reporter=text-summary tape 'test/unit/**/**.test.js'",
-    "test:coverage-check": "npm run test:coverage && nyc check-coverage",
+    "test:coverage": "npm run test:unit -- --coverage --coverageThreshold='{}'",
+    "test:coverage-check": "npm run test:unit -- --coverage",
     "audit:fix": "npm audit fix",
     "audit:check": "npx audit-ci --config ./audit-ci.jsonc",
     "dep:check": "npx ncu -e 2",
