feat: add grype src scan (#41)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lint:fix": "npm run standard:fix",
     "test:unit": "tape 'test/unit/**/**.test.js'",
     "test:xunit": "npm run test:unit | tap-xunit",
+    "test:integration": "echo 'No integration tests'",
+    "test:functional": "echo 'No functional tests'",
     "test:coverage": "nyc --reporter=lcov --reporter=text-summary tape -- 'test/unit/**/**.test.js'",
     "test:coverage-check": "npm run test:coverage && nyc check-coverage",
     "audit:fix": "npm audit fix",
@@ -50,9 +52,9 @@
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
-    "eslint": "9.31.0",
+    "eslint": "9.36.0",
     "faucet": "0.0.4",
-    "npm-check-updates": "18.0.1",
+    "npm-check-updates": "18.3.0",
     "nyc": "17.1.0",
     "pre-commit": "1.2.2",
     "standard": "17.1.2",
